# awf-jaxutils

./: .gitignore  .gitmodules  Adam.py  Arg.py  PType.py  ParamsDict.py  README.md  dataset.py  jaxpr_to_expr.py  pyproject.toml  pytree_print.py  rand.py  requirements.txt  show_jaxpr.py  test_PType.py  test_typecheck.py  typecheck.py  vjp.py
awfutils/: Arg.py  test_Arg.py
experimental/: stmt-typing.ipynb
jaxutils/: Adam.py  ParamsDict.py  array_expr.py  ast_utils.py  datasets.py  expr.py  expr_ast.py  expr_eval.py  expr_lib.py  expr_parser.py  jaxpr_to_expr.py  notes.md  old_show_jaxpr.py  pytree_print.py  show_jaxpr.py  vjp-notes.md  vjp.py
test/: test_ast.py  test_emit_readme.py  test_eval.py  test_expr.py  test_jaxpr_to_expr.py  test_old_show_jaxpr.py  test_parser.py  test_pretty.py  test_ssa.py  test_transformer.py  test_vjp.py
