[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxutils"
authors = [
    {name = "Andrew Fitzgibbon", email = "awf@fitzgibbon.ie"},
]
description = "Some JAX utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
dynamic = ["dependencies"]
version = "1.0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
testpaths = [
    "jaxutils",
    "test"
]
python_files = [
    "*.py"
]

[tool.setuptools]
packages = ["jaxutils"]
